# base-scraper

./: .coverage  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/application/dto/: product_links_payload.py  scrape_request.py
app/application/usecases/: run_scraper.py  scrape_jobs.py
app/docs/: git.md
app/docs/payload/: product_details.md  product_links.md
app/domain/entities/: job.py
app/domain/interfaces/: browser.py  logger.py  scraper.py
app/domain/services/: extraction_engine.py  navigation_engine.py  pagination_engine.py
app/domain/services/engine/: extraction_engine.py  navigation_engine.py  pagination_engine.py
app/domain/services/pipeline/: context.py  scraper_pipeline.py  stage.py
app/domain/services/stages/: dedup_stage.py  extraction_stage.py  (+2 more)
app/infrastructure/browsers/: browser_factory.py  browser_pool.py
app/infrastructure/logging/: app_logger.py  live_logger.py  websocket_manager.py
app/infrastructure/scrapers/: generic_scraper.py
app/presentation/: validation_exception_handler.py
app/presentation/api/: routes.py
app/tests/: conftest.py  test_api.py  test_generic_scraper.py  test_usecase.py
app/tests/application/: test_run_scraper_usecase.py
app/tests/architecture/: test_architecture_integrity.py
app/tests/domain/: test_extraction_engine.py  test_generic_scraper.py  test_job_entity.py  test_navigation_engine.py  test_pagination_engine.py
app/tests/infrastructure/: test_browser_factory.py  test_generic_scraper.py  test_websocket_logger.py
app/tests/presentation/: test_api_routes.py
(+5 files in other folders)
