[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scraper-api"
version = "1.0.0"
description = "Clean architecture job scraper API"
authors = [{ name = "Faniry Ramanitrarivo" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "selenium>=4.21.0",
    "beautifulsoup4>=4.12.3",
    "playwright>=1.44.0",
    "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "black"
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
